--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>This PC</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/7.css@0.5.0/dist/7.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/7.css">
   <style>
     body {
       margin: 0;
