--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -154,14 +155,62 @@
         <button aria-label="Close"></button>
       </div>
     </div>
-    <div class="window-body">
-      <div class="address-bar">
-        <button class="button">Organize</button>
-        <button class="button">System Properties</button>
-        <button class="button">Uninstall a Program</button>
-        <button class="button">Map Network Drive</button>
-        <button class="button">Control Panel</button>
-      </div>
+    <ul role="menubar" class="can-hover">
+      <li role="menuitem" tabindex="0" aria-haspopup="true">
+        File
+        <ul role="menu">
+          <li role="menuitem">
+            <a href="#menubar">
+              Open <span>Ctrl+O</span>
+            </a>
+          </li>
+          <li role="menuitem">
+            <a href="#menubar">
+              Save <span>Ctrl+S</span>
+            </a>
+          </li>
+          <li role="menuitem" class="has-divider">
+            <a href="#menubar">
+              Save As... <span>Ctrl+Shift+S</span>
+            </a>
+          </li>
+          <li role="menuitem"><a href="#menubar">Exit</a></li>
+        </ul>
+      </li>
+      <li role="menuitem" tabindex="0" aria-haspopup="true">
+        Edit
+        <ul role="menu">
+          <li role="menuitem"><a href="#menubar">Undo</a></li>
+          <li role="menuitem"><a href="#menubar">Copy</a></li>
+          <li role="menuitem"><a href="#menubar">Cut</a></li>
+          <li role="menuitem" class="has-divider"><a href="#menubar">Paste</a></li>
+          <li role="menuitem"><a href="#menubar">Delete</a></li>
+          <li role="menuitem"><a href="#menubar">Find...</a></li>
+          <li role="menuitem"><a href="#menubar">Replace...</a></li>
+          <li role="menuitem"><a href="#menubar">Go to...</a></li>
+        </ul>
+      </li>
+      <li role="menuitem" tabindex="0" aria-haspopup="true">
+        View
+        <ul role="menu">
+          <li role="menuitem" tabindex="0" aria-haspopup="true">
+            Zoom
+            <ul role="menu">
+              <li role="menuitem"><button>Zoom In</button></li>
+              <li role="menuitem"><button>Zoom Out</button></li>
+            </ul>
+          </li>
+          <li role="menuitem"><a href="#menubar">Status Bar</a></li>
+        </ul>
+      </li>
+      <li role="menuitem" tabindex="0" aria-haspopup="true">
+        Help
+        <ul role="menu">
+          <li role="menuitem"><a href="#menubar">View Help</a></li>
+          <li role="menuitem"><a href="#menubar">About</a></li>
+        </ul>
+      </li>
+    </ul>
       <div class="address-bar">
         <img src="icons/back.png" width="20" alt="Back">
         <input class="input" type="text" value="Computer" style="flex: 1;">
