--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
               <p><em>News: UI improved!</em></p>
               <p><em>Have any suggestions/additions to the site ?</em></p>
               <p><em>DM me on discord, filedropconfusion</em></p>
+              <p><em>Soon this domain will be moved to teniot.eu.org</em></p>
             </div>
           </div>
           <iframe id="siteFrame" src=""></iframe>
