--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>This PC</title>
+  <title>Recreation 7</title>
   <link rel="stylesheet" href="https://unpkg.com/7.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <style>
@@ -14,12 +14,12 @@
     }
 
     .window {
-  width: 1000px;
-  height: 500px; 
-  max-width: none; 
-  margin: auto;
-  position: relative;
-}
+    width: 1000px;
+    height: 500px; 
+    max-width: none; 
+    margin: auto;
+    position: relative;
+    }
 
     .window-content {
       display: flex;
@@ -213,6 +213,20 @@
       display: none;
       border: none;
     }
+
+    .sidebar-item {
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  color: white;
+}
+
+.sidebar-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
+
   </style>
 </head>
 
