--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Recreation 7</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Recreation7</title>
+  <link rel="icon" href="icons\Filetypes, Devices, Miscellaneous\imageres_110.ico" />
   <link rel="stylesheet" href="https://unpkg.com/7.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <style>
@@ -15,7 +17,7 @@
 
     .window {
     width: 1000px;
-    height: 500px; 
+    height: 550px; 
     max-width: none; 
     margin: auto;
     position: relative;
