--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
           <p><em>Have any suggestions/additions to the site ?</em></p>
           <p><em>DM me on discord, recreation7</em></p>
           <p><em>Soon this domain will be moved to teniot.eu.org</em></p>
-          <p><em>Thanks for the support !</em></p>
+          <p><em>Please join my Discord server for more info https://discord.gg/8eje3tB2Xd </em></p>
+          <p><em>more info https://discord.gg/8eje3tB2Xd</em></p>
         </div>
       </div>
       <iframe id="siteFrame" src=""></iframe>
