--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       Recreation7 is under maintenance/down. You can wait on this page for some time.
     </p>
 
+     <p>
+       <strong>Update:</strong>This may take a longer time since the html I have is totally diffrent from the one in the past one and will take time to reconstruct.
+    </p>
+
     <h2>What was this site?</h2>
     <ul>
       <li><strong>Recreation7</strong> is a site where the main goal is to recreate the Windows 7 UI as much as possible.</li>
