--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </p>
 
      <p>
-       <strong>Update:</strong>This may take a longer time since the html I have is totally diffrent from the one in the past one and will take time to reconstruct.
+       <strong>Update:</strong>This may take a long time since the HTML file I have is totally different from the one in the past one and will take time to reconstruct.
     </p>
 
     <h2>What was this site?</h2>
