--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     .top-bar {
-      background-color: #00b489; /* Green line color */
+      background-color: #00AB7F; /* Green line color */
       height: 10px;
       width: 100%;
     }
